--- a/home.html
+++ b/home.html
@@ -66,7 +66,7 @@
 
                 <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                     <div class="navbar-nav ml-auto">
-                        <a href="index.html" class="nav-item nav-link active">Home</a>
+                        <a href="home.html" class="nav-item nav-link active">Home</a>
                         <a href="about.html" class="nav-item nav-link">About</a>
                         <a href="event.html" class="nav-item nav-link">Events</a>
                         <div class="nav-item dropdown">
